confik-macros/tests/trybuild/fail-default-parse.stderr
error[E0277]: the trait bound `usize: From<i32>` is not satisfied
 --> tests/trybuild/fail-default-parse.rs:3:24
  |
3 |     #[confik(default = 1 + 2)]
  |                        ^----
  |                        |
  |                        the trait `From<i32>` is not implemented for `usize`, which is required by `{integer}: Into<_>`
  |                        this tail expression is of type `i32`
  |
  = help: the following other types implement trait `From<T>`:
            `usize` implements `From<bool>`
            `usize` implements `From<std::ptr::Alignment>`
            `usize` implements `From<u16>`
            `usize` implements `From<u8>`
  = note: required for `i32` to implement `Into<usize>`
